[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/oilco_portal_one solo.png" type="Texture" id=1]
[ext_resource path="res://World/OilCoDoorOne.gd" type="Script" id=2]
[ext_resource path="res://UI/panel_Example2.png" type="Texture" id=3]
[ext_resource path="res://Player/main_player_face_still.png" type="Texture" id=4]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Music and Sounds/SpookyBells.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 30.0167

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.647059, 0.560784, 0.788235, 0.270588 )

[node name="OilCoDoorOne" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
margin_left = 1.0
margin_top = 2.0
margin_right = 41.0
margin_bottom = 24.0

[node name="Sprite" type="Sprite" parent="PopupDialog"]
position = Vector2( 51.75, 10 )
scale = Vector2( 0.334444, 0.4 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog"]
margin_left = 25.0
margin_top = -2.0
margin_right = 193.0
margin_bottom = 49.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Looks like OilCo set up a base here.  I'll need to find a key card..."

[node name="Panel" type="Panel" parent="PopupDialog"]
margin_left = -8.0
margin_top = -4.0
margin_right = 22.0
margin_bottom = 24.0
custom_styles/panel = SubResource( 3 )

[node name="PlayerSprite" type="Sprite" parent="PopupDialog"]
position = Vector2( 7, 18 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 4 )

[node name="SpookyBells" parent="." instance=ExtResource( 6 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
